Quick fix to letter-spacing

--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ ul>.notion-list-item:before {
 
 h1.notion-heading {
     line-height: 1 !important;
-    letter-spacing: -0.333em !important;
+    letter-spacing: -0.025em !important;
     font-weight: 600 !important;
     font-size: 2.5rem !important;
     margin-top: 1.5rem !important;
@@ -374,13 +374,13 @@ h2.notion-heading {
     line-height: 1.5 !important;
     margin-bottom: 0 !important;
     font-size: 2rem !important;
-    letter-spacing: -0.25em !important;
+    letter-spacing: -0.025em !important;
 }
 
 h3.notion-heading {
     font-size: 1.5rem !important;
     text-transform: none !important;
-    letter-spacing: -.0.25em !important;
+    letter-spacing: -0.025em !important;
     margin-bottom: 0.5rem !important;
 }
 
